--- a/styles.css
+++ b/styles.css
@@ -19,28 +19,92 @@
 }
 
 /* ----- HOME -----*/
-
 .header{
   height: 111px;
   width: 100%;
   background: var(--blue);
   box-sizing: 2px 4px 4px(0,0,0, 0.25);
+  position: fixed;
+}
+.header.scrolled{
+  background: rgba(119, 168, 172, 0.9);
+  transition: all 0.5s;
+}
+.logo_container{
+  display: flex;
+  align-items: center;
+  padding: 30px 0 0 20px;
 }
 .logo_text{
   color: var(--white);
   font-size: var(--mb-font-text-bigger);
 }
-.logo_container{
-  display: flex;
-  align-items: center;
+.logo_text.scrolled{
+  color: var(--black);
 }
 
 
-
+nav{
+  width: 323px;
+  height: 311px;
+}
+.header_nav{
+  padding-top: 36px;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  transform: translateY(-200%);
+  transition: all 0.5s;
+}
 nav a{
   color: var(--black);
   font-size: var(--mb-font-headers);
+  padding: 40px;
 }
 nav ul li{
   text-decoration: none;
+  background-color: var(--white);
+  padding: 20px;
+}
+.showMenu{
+  transform: translate(0);
+}
+
+
+.hamburger{
+  position: absolute;
+  top: 40px;
+  right: 25px;
+  font-size: 2rem;
+  background-color: var(--blue);
+  border: none;
+  cursor: pointer;
+}
+.icon-close{
+  display: none;
+}
+
+
+
+
+/* ----------------------------Media-Queries---------------------------- */
+
+@media (min-width:834px){
+  /* ----- HOME -----*/
+  /* nav{
+    display: none;
+  } */
+
+}
+
+
+
+
+
+
+@media (min-width:1280px){
+  /* ----- HOME -----*/
+
+
 }
