--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,10 @@ h1,h2,h3,h4,h5{
 p{
   font-family: var(--font-readable);
 }
+
+
+
+
 /* ----- Header -----*/
 header{
   position: sticky;
@@ -74,8 +78,7 @@ header{
 .logo_text.scrolled{
   color: var(--black);
 }
-
-
+/* ----- Header NAV Bar-----*/
 nav{
   min-width: 270px;
   max-width: 323px;
@@ -110,8 +113,6 @@ nav ul li:hover{
   text-decoration: underline 3px;
   text-underline-offset: 5px;
 }
-
-
 .triangle-nav{
   position: absolute;
   background-color: var(--white);
@@ -130,12 +131,9 @@ nav ul li:hover{
   position: absolute;
   left: 0px;
 }
-
 .showMenu{
   transform: translate(0);
 }
-
-
 .hamburger{
   position: absolute;
   top: 40px;
@@ -148,22 +146,11 @@ nav ul li:hover{
 .icon-close{
   display: none;
 }
-
-
 .cta-header_container{
   display: none;
 }
 
-
-
-
-
-
-
-
-
 /* ----- Footer -----*/
-
 .footer_container{
   box-shadow: 0px -18px 10px -20px rgba(0,0,0,0.5);
   height: 279px;
@@ -188,12 +175,6 @@ nav ul li:hover{
   font-size: var(--mb-font-headers);
   margin-top: -10px;
 }
-
-
-
-
-
-
 /* ----- About Us Page -----*/
 .img_container{
   padding-top: 25px;
@@ -204,7 +185,6 @@ nav ul li:hover{
   margin: 0px auto 0 auto;
   width: 100%;
   max-width: 600px;
-  padding: 0 25px;
 }
 .about_container{
   padding: 0 25px 25px 25px;
@@ -231,6 +211,37 @@ nav ul li:hover{
 .about-us_text-hidden{
   display: none;
 }
+/* ----- Every Page -----*/
+.mobile-hidden::after{
+  display: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -257,8 +268,7 @@ nav ul li:hover{
   }
   .header-span{
     background-color: var(--white);
-    display: inline-flex;
-    flex-wrap: nowrap;
+    width: max-content;
     z-index: 3;
   }
 
@@ -278,11 +288,11 @@ nav ul li:hover{
     margin-left: 17px;
     font-size: var(--dk-font-headers);
   }
+
+    /* ----- HOME NAV Bar-----*/
   nav{
     display: none;
    }
-
-
   .cta-header_container{
     float: right;
     display: flex;
@@ -309,17 +319,9 @@ nav ul li:hover{
 }
 
 
-
-
-
-
-
-
-
 /* ----- About Us Page -----*/
 .about-img{
   margin: -10px 0 0 0;
-  float: left;
   width: 430px;
   height: 550px;
   padding: 0 50px 0 0px;
@@ -330,6 +332,7 @@ nav ul li:hover{
 }
 .about-us_container{
   display: flex;
+  margin-bottom: 10px;
 }
 .about-us_text{
   display: flex;
@@ -342,11 +345,6 @@ nav ul li:hover{
   display: grid;
   align-items: center;
   padding: 10px 0px 17px 0px;
-}
-.header-span{
-  background-color: var(--white);
-  width: 170px;
-  z-index: 3;
 }
 .about-h1::after{
   position: absolute;
@@ -410,18 +408,16 @@ nav ul li:hover{
 
 
   /* ----- About Us Page -----*/
-.about-img{
-  width: 530px;
-  height: 700px;
-}
-.about-us_text-hidden{
-  display: block;
-}
-.about-us_text{
-  justify-content: space-around;
-}
-
-
+  .about-img{
+    width: 530px;
+    height: 700px;
+  }
+  .about-us_text-hidden{
+    display: block;
+  }
+  .mobile-hidden::after{
+    display: inline;
+  }
 }
 
 
@@ -439,7 +435,7 @@ nav ul li:hover{
 
 
 
-
+/* ----- Buttons-----*/
 .cta-header{
   display: flex;
   justify-content: center;
