--- a/styles.css
+++ b/styles.css
@@ -150,6 +150,66 @@ nav ul li:hover{
   display: none;
 }
 
+
+
+
+
+.index-main-header{
+  padding: 25px 0 0 25px;
+}
+.post-of-today_container{
+  padding: 25px;
+  position: relative;
+}
+.post-of-today_img-container{
+  background-color: #072d2d;
+  width: 100%;
+  height: 500px;
+}
+.post-of-today_text-container{
+  padding: 25px;
+  background-color: #fff;
+  color: var(--black);
+  
+}
+.cta-read-more-desktop{
+  display: none;
+}
+.cta-read-more-mobile{
+  width: 100%;
+  padding: 20px;
+  background-color: var(--yellow);
+  font-size: var(--mb-font-headers);
+  border: none;
+  bottom: 0;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* ----- Footer -----*/
 .footer_container{
   box-shadow: 0px -18px 10px -20px rgba(0,0,0,0.5);
