--- a/styles.css
+++ b/styles.css
@@ -212,20 +212,29 @@ nav ul li:hover{
   background-color: #fff;
   box-shadow: var(--box-shadow);
   color: var(--black);
+  border-radius: 2px;
+}
+.post_container:hover{
+  cursor: pointer;
+  background-color: #f6f6f6;
+  box-shadow: 0px 6px 10px rgba(128, 128, 128, 0.352);
 }
 .post_img{
   width: 100%;
   height: 197px;
   background-position: center;
   background-repeat: none;
+  border-radius: 2px;
   box-shadow: var(--box-shadow);
 }
 .post_title{
+  font-family: var(--font-normal);
   font-size: var(--mb-font-poster-header);
-  padding:8px 0;
+  padding:4px 0 7px 0;
 
 }
 .post_text{
+  font-family: var(--font-readable);
   font-size: var(--mb-font-poster-text);
   display: -webkit-box;
   -webkit-line-clamp: 4;
@@ -233,10 +242,64 @@ nav ul li:hover{
   text-overflow: ellipsis;
   overflow: hidden;
 }
+.post-read-more{
+  font-size: var(--mb-font-poster-header);
+  float: right;
+  padding-top: 6px;
+}
+.post-read-more:hover{
+  text-decoration: underline;
+}
 
 
 
+/* -----List Of Posts Page-----*/
+.form_container{
+  padding: 25px;
+}
+.form-list-of-posts > *{
+  display: flex;
+  line-height: 40px;
+}
+.search-input{
+  width: 100%;
+  padding: 10px 0 10px 50px;
+  font-size: var(--mb-font-headers);
+  border-width: 2px solid var(--black);
+  border-radius: 2px;
+  color: var(--black);
+}
+.search-icon{
+  border: none;
+  background-color: #fff;
+  position: absolute;
+  top: 149px;
+  left: 45px;
+  font-size: var(--mb-font-headers);
+  color: var(--black);
+}
+.search-icon:hover{
+cursor: pointer;
+}
+.list-of-posts_checkboxes{
+  width: 31px;
+  height: 31px;
+  border-radius: 10px;
+}
 
+
+
+.all-posts_container{
+  display: grid;
+  gap: 12px;
+  place-items: center;
+}
+.all-posts-cta_container{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 33px 0px;
+}
 
 
 
@@ -336,7 +399,7 @@ nav ul li:hover{
 .contact-paragraph{
   margin: 18px 0 28px 0;
 }
-form > *{
+.form-contact > *{
   display: flex;
   flex-direction: column;
 }
@@ -660,7 +723,19 @@ label{
 .cta-read-more-mobile:hover{
   background-color: rgb(223, 216, 201);
 }
-
+.all-posts-cta{
+  width: 150px;
+  padding: 10px;
+  cursor: pointer;
+  border: none;
+  box-shadow: var(--box-shadow);
+  color: var(--black);
+  background-color: var(--yellow);
+  font-size: var(--mb-font-headers);
+}
+.all-posts-cta:hover{
+  background-color: rgb(233, 227, 217);
+}
 
 
 
