--- a/styles.css
+++ b/styles.css
@@ -802,6 +802,32 @@ label{
   .mobile-hidden::after{
     display: inline;
   }
+
+  /* ----- Posts In General-----*/ 
+  .post_container{
+    width: 456px;
+    height: 587px;
+    padding: 25px;
+  }
+  .post_img{
+    width: 100%;
+    height: 361px;
+    border-radius: 0px;
+  }
+  .post_title{
+    -webkit-line-clamp: 1;
+    padding:4px 0;
+  }
+  .post_text{
+    -webkit-line-clamp: 5;
+  }
+  
+
+  /* ----- List Of Posts-----*/ 
+  .all-posts_container{
+    grid-template-columns: repeat(auto-fit,minmax(416px, 1fr));
+  }
+
   
 }
 
