--- a/styles.css
+++ b/styles.css
@@ -222,14 +222,6 @@ nav ul li:hover{
 .cta-last-post{
   left: 0px;
 }
-
-
-
-
-
-
-
-
 /* -----Posts Main Page-----*/
 .index-headers{
   padding: 33px 25px;
@@ -238,7 +230,6 @@ nav ul li:hover{
 .container-asia{
   margin-bottom: 33px;
 }
-
 /* -----Posts General-----*/
 .post_container{
   width: 280px;
@@ -265,6 +256,10 @@ nav ul li:hover{
 .post_title{
   font-family: var(--font-normal);
   font-size: var(--mb-font-poster-header);
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
+  overflow: hidden;
   padding:4px 0 7px 0;
 
 }
@@ -285,9 +280,6 @@ nav ul li:hover{
 .post-read-more:hover{
   text-decoration: underline;
 }
-
-
-
 /* -----List Of Posts Page-----*/
 .list-of-posts-header{
   display: none;
@@ -351,10 +343,6 @@ nav ul li:hover{
 [type="checkbox"]:checked + label{
   font-weight: 900;
 }
-
-
-
-
 .all-posts_container{
   padding: 0 25px;
   display: grid;
@@ -368,28 +356,6 @@ nav ul li:hover{
   justify-content: space-between;
   padding: 33px 0px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* ----- Footer -----*/
 .footer_container{
   box-shadow: 0px -18px 10px -20px rgba(0,0,0,0.5);
@@ -527,7 +493,27 @@ label{
 .cta-send:hover{
   background-color: rgb(236, 229, 219);
 }
+/* ----- Specifics Page -----*/
+.specifics-all_container{
+  padding: 25px;
+  height: 500px;
+}
+/* .specifics-img_container{
 
+} */
+.specifics_title{
+  font-size: var(--mb-font-headers-biggest);
+}
+.specifics-main-img{
+  width: 100%;
+  background-position: center;
+  background-repeat: none;
+  border-radius: 2px;
+  box-shadow: var(--box-shadow);
+}
+/* .specifics-text_container{
+
+} */
 
 
 
