--- a/styles.css
+++ b/styles.css
@@ -1029,6 +1029,27 @@ label{
   border-radius: 2px;
   margin-bottom: 25px;
 }
+.loading_container{
+  padding: 25px;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  justify-content: center;
+
+  width: 100%;
+  height: 500px;
+}
+.loading_post{
+  padding: 25px;
+  background-color: #fff;
+  width: 250px;
+  height: 350px;
+}
+.loading_img{
+  width: 100%;
+  height: 150px;
+  margin-bottom: 25px;
+}
 .loading-text{
   width: 100%;
   height: 10px;
