--- a/styles.css
+++ b/styles.css
@@ -467,8 +467,12 @@ nav ul li:hover{
   border-bottom:  3px solid #21d07e;
 }
 .error-text{
+  margin-top: -10px;
+  padding-bottom: 10px;
   color: #d02424;
   font-size: var(--mb-font-text);
+  font-family: var(--font-readable);
+  font-weight: 500;
 }
 /* .input:hover{
   border-bottom:  3px solid #072d2d;
@@ -746,6 +750,9 @@ label{
 }
 .contact_text{
   padding-left: 50px;
+}
+.error-text p{
+  font-size: var(--mb-font-text);
 }
 .cta-send{
   margin: 25px 0;
