--- a/styles.css
+++ b/styles.css
@@ -591,7 +591,32 @@ label{
 }
 
 
-
+.feedback_container{
+  width: 100%;
+  padding: 25px;
+  background-color: #fff;
+}
+.feedback_text{
+  padding: 18px 0;
+}
+.feedback-cta_container{
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
+  padding: 25px 0;
+}
+.feedback-btn{
+  font-size: var(--mb-font-headers);
+  border: none;
+  box-shadow: var(--box-shadow);
+  padding: 10px 80px;
+}
+.cta-like{
+  background-color: #18da63;
+}
+.cta-dislike{
+  background-color: #c62525;
+}
 
 
 
