--- a/styles.css
+++ b/styles.css
@@ -578,8 +578,6 @@ label{
   font-weight: 500;
   padding: 8px 0;
 }
-
-
 .specifics_title{
   font-size: var(--mb-font-headers-biggest);
   padding: 0 0 25px 0;
@@ -591,10 +589,6 @@ label{
   border-radius: 2px;
   box-shadow: var(--box-shadow);
 }
-
-
-
-
 .specifics-other-img_container{
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -618,8 +612,6 @@ label{
 .specifics-other-img_container img:nth-child(3){
   grid-column: 3/ -1;
 }
-
-
 .feedback_container{
   width: 100%;
   padding: 25px;
@@ -646,6 +638,41 @@ label{
 .cta-dislike{
   background-color: #c62525;
 }
+.enlarge_container{
+  z-index: 10001;
+  position: fixed;
+  display: grid;
+  place-items: center;
+  width: 100%;
+  height: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #0f1f1ef0;
+}
+.enlarge_container img{
+  position: absolute;
+  width: 80%;
+  height: 60%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  object-fit: contain;
+  box-shadow: none;
+}
+.enlarge-icon-close{
+  color: var(--yellow);
+  cursor: pointer;
+  font-size: 3rem;
+  position: absolute;
+  padding: 10px;
+  top: 12%;
+  right: 15px;
+}
+.enlarge-icon-close:hover{
+  font-size: 3.2rem;
+}
+
 
 
 
